--- a/.github/workflows/dev-images.yml
+++ b/.github/workflows/dev-images.yml
@@ -42,15 +42,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      # Login to Docker Hub
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+          password: ${{ secrets.TOKEN }}
       # Prepare the environment
       - name: Prepare environment
         run: |
